# Kupikupi

./: .gitignore  Dockerfile  README.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/scripts/: demo_token.py  docker-entrypoint.sh  field_test_checklist.py  notification_cycle.py  notifications.py  product_duplicates.py  seed.py  smoke_mvp.py  source_sync.py  staging_env_template.py  staging_preflight.py  staging_smoke.py  store_feed.py  telegram_allowlist.py  user_data.py  user_data_smoke.py
backend/tests/: conftest.py  test_auth.py  test_catalog_admin.py  test_config.py  test_deals.py  test_demo_user.py  test_error_reporting.py  test_field_test_checklist_script.py  test_fx.py  test_health.py  test_jobs.py  test_model_imports.py  test_mvp_smoke.py  test_notification_cycle_script.py  test_notifications.py  test_notifications_script.py  test_offers.py  test_ollama_parser.py  test_openapi_contract.py  test_privacy.py  test_product_duplicates_script.py  test_retention.py  test_seed.py  test_shopping_requests.py  test_smoke_mvp_script.py  test_source_sync.py  test_source_sync_script.py  test_staging_env_template_script.py  test_staging_preflight_script.py  test_staging_smoke_script.py  test_store_feed_config.py  test_store_feed_script.py  test_store_heureka_xml_adapter.py  test_store_http_csv_adapter.py  test_store_http_json_adapter.py  test_store_srovname_api_adapter.py  test_telegram_allowlist_script.py  test_user_data_smoke_script.py  test_watchlists.py
telegram_bot/: .dockerignore  .env.example  Dockerfile  pyproject.toml
telegram_bot/bot/: backend_client.py  commands.py  main.py  (+4 more)
(+137 files in other folders)
