[project]
name = "kupikupi-backend"
version = "0.1.0"
description = "Kupikupi FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "asyncpg>=0.30.0",
  "celery>=5.5.0",
  "fastapi>=0.115.0",
  "greenlet>=3.2.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.9.0",
  "python-jose[cryptography]>=3.4.0",
  "redis>=6.0.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21.0",
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.26.0",
  "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
