[project]
name = "kupikupi-telegram-bot"
version = "0.1.0"
description = "Kupikupi Telegram Bot"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.20.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.26.0",
  "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
